solved spacing bug

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,10 +9,5 @@ body{
   margin: 0px;
   padding: 0px;
   background-color: black;
-  font-family: 'Bitter', serif;
-  font-family: 'Lobster', cursive;
-  font-family: 'M PLUS 2', sans-serif;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Nunito', sans-serif;
-  font-family: 'Roboto', sans-serif;
+  
 }
